# nexus-giga

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/agents/: diagnostics.py  orchestrator.py
backend/api/: a2a_server.py  main.py
backend/mcp/: mcp_server.py
backend/memory/: memory_manager.py
backend/rag/: ingest.py
backend/tests/: evaluate_system.py  test_a2a_client.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/src/app/: globals.css  page.tsx
scripts/: generate_pdf.py  init_db.py
